--- a/app/globals.css
+++ b/app/globals.css
@@ -74,9 +74,11 @@ body {
   * {
     @apply border-border !scroll-smooth;
   }
+
   body {
     @apply bg-background text-foreground;
   }
+
   button {
     @apply active:outline-none;
   }
@@ -86,4 +88,9 @@ body {
   .heading {
     @apply font-bold text-4xl md:text-5xl text-center;
   }
+}
+
+.blur {
+  -webkit-backdrop-filter: blur(8px) !important;
+  backdrop-filter: blur(8px) !important;
 }
