--- a/app/globals.css
+++ b/app/globals.css
@@ -90,7 +90,7 @@ body {
   }
 }
 
-.blur {
+.blurFilter {
   -webkit-backdrop-filter: blur(5px) !important;
   backdrop-filter: blur(5px) !important;
 }
